--- a/Data Contest/trial_1.ipynb
+++ b/Data Contest/trial_1.ipynb
@@ -425,6 +425,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = train['score'].to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test = np.ones_like(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test = 4*y_test\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([1,2,3,4])\n",
+    "b = np.array([1,2,3,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.linalg.norm(y-y_test)/len(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummy_submission"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -556,102 +638,178 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = train['score'].to_numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>song_id</th>\n",
+       "      <th>platform_id</th>\n",
+       "      <th>released_year</th>\n",
+       "      <th>language</th>\n",
+       "      <th>number_of_comments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8328</td>\n",
+       "      <td>T17332564</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>1936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8591</td>\n",
+       "      <td>T773514</td>\n",
+       "      <td>1925.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>718</td>\n",
+       "      <td>U10975</td>\n",
+       "      <td>1929.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>5485</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6593</td>\n",
+       "      <td>Y12839</td>\n",
+       "      <td>1968.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>743</td>\n",
+       "      <td>Q28881</td>\n",
+       "      <td>2002.0</td>\n",
+       "      <td>en-US</td>\n",
+       "      <td>10411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9976</th>\n",
+       "      <td>2048</td>\n",
+       "      <td>X15811568</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>4793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9977</th>\n",
+       "      <td>2552</td>\n",
+       "      <td>W9597</td>\n",
+       "      <td>1952.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>1365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9978</th>\n",
+       "      <td>6741</td>\n",
+       "      <td>T105574</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>en-US</td>\n",
+       "      <td>1296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9979</th>\n",
+       "      <td>4564</td>\n",
+       "      <td>W13624367</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>1961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9980</th>\n",
+       "      <td>8970</td>\n",
+       "      <td>U61915</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>495</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>9981 rows × 5 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([3, 4, 5, ..., 3, 4, 5], dtype=int64)"
+       "      song_id platform_id  released_year language  number_of_comments\n",
+       "0        8328   T17332564         2013.0      eng                1936\n",
+       "1        8591     T773514         1925.0      eng                 420\n",
+       "2         718      U10975         1929.0      eng                5485\n",
+       "3        6593      Y12839         1968.0      NaN                 200\n",
+       "4         743      Q28881         2002.0    en-US               10411\n",
+       "...       ...         ...            ...      ...                 ...\n",
+       "9976     2048   X15811568         2013.0      eng                4793\n",
+       "9977     2552       W9597         1952.0      eng                1365\n",
+       "9978     6741     T105574         2006.0    en-US                1296\n",
+       "9979     4564   W13624367         2012.0      eng                1961\n",
+       "9980     8970      U61915         1987.0      eng                 495\n",
+       "\n",
+       "[9981 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y"
+    "songs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "34252"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "song_labels['label_id'].nunique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_test = np.ones_like(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 1, 1, ..., 1, 1, 1], dtype=int64)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_test = 4*y_test\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.array([1,2,3,4])\n",
-    "b = np.array([1,2,3,5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0011798097625161789"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linalg.norm(y-y_test)/len(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -675,95 +833,131 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>test_row_id</th>\n",
-       "      <th>score</th>\n",
+       "      <th>song_id</th>\n",
+       "      <th>platform_id</th>\n",
+       "      <th>released_year</th>\n",
+       "      <th>language</th>\n",
+       "      <th>number_of_comments</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2.8</td>\n",
+       "      <td>8328</td>\n",
+       "      <td>T17332564</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>1936</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3.1</td>\n",
+       "      <td>8591</td>\n",
+       "      <td>T773514</td>\n",
+       "      <td>1925.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>4.2</td>\n",
+       "      <td>718</td>\n",
+       "      <td>U10975</td>\n",
+       "      <td>1929.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>5485</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>3.1</td>\n",
+       "      <td>6593</td>\n",
+       "      <td>Y12839</td>\n",
+       "      <td>1968.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>4.2</td>\n",
+       "      <td>743</td>\n",
+       "      <td>Q28881</td>\n",
+       "      <td>2002.0</td>\n",
+       "      <td>en-US</td>\n",
+       "      <td>10411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>670676</th>\n",
-       "      <td>670676</td>\n",
-       "      <td>4.2</td>\n",
+       "      <th>9976</th>\n",
+       "      <td>2048</td>\n",
+       "      <td>X15811568</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>4793</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>670677</th>\n",
-       "      <td>670677</td>\n",
-       "      <td>2.8</td>\n",
+       "      <th>9977</th>\n",
+       "      <td>2552</td>\n",
+       "      <td>W9597</td>\n",
+       "      <td>1952.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>1365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>670678</th>\n",
-       "      <td>670678</td>\n",
-       "      <td>2.8</td>\n",
+       "      <th>9978</th>\n",
+       "      <td>6741</td>\n",
+       "      <td>T105574</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>en-US</td>\n",
+       "      <td>1296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>670679</th>\n",
-       "      <td>670679</td>\n",
-       "      <td>2.8</td>\n",
+       "      <th>9979</th>\n",
+       "      <td>4564</td>\n",
+       "      <td>W13624367</td>\n",
+       "      <td>2012.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>1961</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>670680</th>\n",
-       "      <td>670680</td>\n",
-       "      <td>2.8</td>\n",
+       "      <th>9980</th>\n",
+       "      <td>8970</td>\n",
+       "      <td>U61915</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>495</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>670681 rows × 2 columns</p>\n",
+       "<p>9981 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        test_row_id  score\n",
-       "0                 0    2.8\n",
-       "1                 1    3.1\n",
-       "2                 2    4.2\n",
-       "3                 3    3.1\n",
-       "4                 4    4.2\n",
-       "...             ...    ...\n",
-       "670676       670676    4.2\n",
-       "670677       670677    2.8\n",
-       "670678       670678    2.8\n",
-       "670679       670679    2.8\n",
-       "670680       670680    2.8\n",
+       "      song_id platform_id  released_year language  number_of_comments\n",
+       "0        8328   T17332564         2013.0      eng                1936\n",
+       "1        8591     T773514         1925.0      eng                 420\n",
+       "2         718      U10975         1929.0      eng                5485\n",
+       "3        6593      Y12839         1968.0      NaN                 200\n",
+       "4         743      Q28881         2002.0    en-US               10411\n",
+       "...       ...         ...            ...      ...                 ...\n",
+       "9976     2048   X15811568         2013.0      eng                4793\n",
+       "9977     2552       W9597         1952.0      eng                1365\n",
+       "9978     6741     T105574         2006.0    en-US                1296\n",
+       "9979     4564   W13624367         2012.0      eng                1961\n",
+       "9980     8970      U61915         1987.0      eng                 495\n",
        "\n",
-       "[670681 rows x 2 columns]"
+       "[9981 rows x 5 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dummy_submission"
+    "songs"
    ]
   },
   {
